# next-play

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat
backend/: from django.db import models.txt  pyproject.toml
backend/app/: manage.py
backend/app/authentication/: backends.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/app/authentication/migrations/: 0001_initial.py
backend/app/easy_hire/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/portals/: models.py  serializers.py  urls.py  utils.py  views.py
backend/app/portals/migrations/: 0001_initial.py  0002_alter_appliedjob_application_id_alter_job_job_id.py  0003_alter_appliedjob_application_id_alter_job_job_id.py  0004_remove_job_job_id_remove_job_pdf_path_and_more.py  0005_jobapplication_contact_no_jobapplication_email_id_and_more.py
backend/services/postgres/: docker-compose.yml
backend/webapp/landing/: views.py
backend/webapp/login/: urls.py  views.py
backend/webapp/webapp/: settings.py  urls.py
candidate_app/: models.py  views.py
candidate_app/migrations/: 0001_initial.py
candidate_app/templates/: candidate_home.html  candidate_login.html  home.html
easyHire/: asgi.py  settings.py  urls.py  wsgi.py
frontend/landing/: index.html  script.js
frontend/login/: index.html  script.js
hp_project/: manage.py
hp_project/UserLogin/: apps.py  urls.py  views.py
hp_project/candidate_app/: admin.py  apps.py  models.py  (+2 more)
hp_webapp/: manage.py
user_login/: serializers.py  urls.py  views.py
(+42 files in other folders)
