[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sourav Kumar Bose <sourav.kumar.bose@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
